{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 15,
  "lineage": "24f1a6bd-cc87-9469-9da8-80db03e908ca",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/airline1-sabre-wolverine/global/networks/wf-us-prod-vpc-demo-vpc1",
            "mtu": 0,
            "name": "wf-us-prod-vpc-demo-vpc1",
            "project": "airline1-sabre-wolverine",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airline1-sabre-wolverine/global/networks/wf-us-prod-vpc-demo-vpc1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/airline1-sabre-wolverine/global/networks/wf-us-prod-vpc-demo-vpc2",
            "mtu": 0,
            "name": "wf-us-prod-vpc-demo-vpc2",
            "project": "airline1-sabre-wolverine",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airline1-sabre-wolverine/global/networks/wf-us-prod-vpc-demo-vpc2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/airline1-sabre-wolverine/global/routes/wf-us-prod-vpc-demo-route",
            "name": "wf-us-prod-vpc-demo-route",
            "network": "https://www.googleapis.com/compute/v1/projects/airline1-sabre-wolverine/global/networks/wf-us-prod-vpc-demo-vpc1",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.0.0.6",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "airline1-sabre-wolverine",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airline1-sabre-wolverine/global/routes/wf-us-prod-vpc-demo-route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-23T01:19:36.696-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/airline1-sabre-wolverine/regions/us-central1/subnetworks/wf-us-prod-vpc-demo-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "wf-us-prod-vpc-demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/airline1-sabre-wolverine/global/networks/wf-us-prod-vpc-demo-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "airline1-sabre-wolverine",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airline1-sabre-wolverine/regions/us-central1/subnetworks/wf-us-prod-vpc-demo-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network_1"
          ]
        }
      ]
    }
  ]
}